--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 **/data/*
 **/__pycache__/*
-**/competitive_agents_results_*.json
+**/*competitive_agents_results_*.json
+**/*competitive_agents_results_*_minimalist_similarity.csv
+**/*competitive_agents_results_*_expressive_similarity.csv
