creator critic testing scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-**/data/*
+**/__pycache__
 **/__pycache__/*
+**/data
+**/data/*
+
+**/*creator_critic*results_*.json
+**/*creator_critic_results*.csv
+
 **/*competitive_agents_results_*.json
 **/*competitive_agents_results_*_similarity.csv
-**/*creator_critic_results_*.json
-**/*creator_critic_results_*_similarity.csv
 **/gamedev*.csv
-**/data
