--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 **/data
 **/data/*
 
-**/*creator_critic*results_*.json
+**/*creator_critic*results*.json
 **/*creator_critic_results*.csv
 
 **/*competitive_agents_results_*.json
